# object_detection

./: .gitignore  .setup_assistant  CMakeLists.txt  Doxyfile  README.md  package.xml
config/: braccio.srdf  fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
doc/LaTeX/: dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  image_capture_8cpp.tex  image_capture_8cpp__incl.md5  image_process_8cpp.tex  image_process_8cpp__incl.md5  index.tex  object__detection_8cpp.tex  object__detection_8cpp__incl.md5  refman.tex  shape_handling_8cpp.tex  shape_handling_8cpp__incl.md5
doc/LaTeX/d0/de6/: object__detection_8cpp.tex
doc/LaTeX/d3/db5/: image_process_8cpp.tex
doc/LaTeX/df/d35/: shape_handling_8cpp.tex
doc/LaTeX/df/db8/: image_capture_8cpp.tex
doc/html/: Innovation in Präzision.eps  _r_e_a_d_m_e_8md.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  drawing_circle_page.html  drawing_rectangle_page.html  files.html  globals.html  globals_func.html  graph_legend.html  image_capture_8cpp.html  image_capture_8cpp__incl.md5  image_process_8cpp.html  image_process_8cpp__incl.md5  index.html  module_name.html  object__detection_8cpp.html  object__detection_8cpp__incl.map  object__detection_8cpp__incl.md5  pages.html  shape_handling_8cpp.html  shape_handling_8cpp__incl.map
doc/html/d0/de6/: object__detection_8cpp.html
doc/html/d3/db5/: image_process_8cpp.html
doc/html/d9/dd3/: image_process_8cpp__incl.map
doc/html/d9/dd6/: _r_e_a_d_m_e_8md.html
doc/html/da/d49/: module_name.html
doc/html/db/dab/: image_capture_8cpp__incl.map
doc/html/dd/da6/: shape_handling_8cpp__incl.md5
doc/html/df/d35/: shape_handling_8cpp.html
doc/html/df/db8/: image_capture_8cpp.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  pages_0.js  pages_1.js  searchdata.js
elfin_manipulation/: CMakeLists.txt  package.xml
elfin_manipulation/launch/: elfin_test.launch  motion_planning_api_tutorial.launch
elfin_manipulation/src/: elfin_test.cpp  move_to_pose (copy).cpp  move_to_pose.cpp
include/: camHandler.h  checkExit.h  imageCapture.h  imageProcess.h  imageProcessor.h  shapeHandling.h  shapes.h
launch/: braccio_moveit_controller_manager.launch.xml  braccio_test_manipulation.launch  camera_test.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  videocapture.launch  warehouse.launch
src/: braccio_test_manipulation.cpp  camera_test.cpp  imageCapture.cpp  imageProcess.cpp  object_detection.cpp  parse_and_publish.cpp  shapeHandling.cpp  videocapture.cpp
stl/: 2020_Arduino_Braccio_base.STL
urdf/: braccio.dae  braccio_arm.backup.dae  braccio_arm.urdf
